--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "my-glitch-app",
-  "version": "0.0.1",
-  "description": "What am I about?",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.15.4",
-    "path": "^0.12.7"
-  },
-  "engines": {
-    "node": "8.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/welcome-project"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+	"name": "fcc-timestamp-microserver",
+	"version": "0.1.0",
+	"description": "Example project showing how to use Sass middleware",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"dependencies": {
+		"express": "^4.14.1",
+		"node-sass-middleware": "^0.11.0",
+		"moment": "^2.17.1"
+	},
+	"engines": {
+		"node": "4.4.5"
+	},
+	"keywords": [
+		"node",
+		"express",
+		"sass"
+	],
+	"license": "MIT"
 }
